--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -21,10 +21,9 @@
 .navbar-logo {
   color: #fff;
   justify-self: start;
-  margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.3rem;
   display: flex;
   align-items: center;
 }
@@ -75,13 +74,15 @@
   display: none;
 }
 
-@media screen and (max-width: 960px) {
+
+
+@media screen and (max-width: 980px) {
   
   .nav-menu {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 90vh;
+    width: 95%;
+    height: 83.8vh;
     position: absolute;
     top: 70px;
     left: -100%;
@@ -89,7 +90,7 @@
     transition: all 0.5s ease;
   }
   .nav-item {
-    height: 100px;
+    height: 150px;
   } 
 
   .nav-menu.active {
@@ -103,19 +104,24 @@
   .nav-links {
     text-align: center;
     justify-content: center;
-    padding: 2rem;
+    margin-top: 10px;
     width:auto;
     color: #242424;
   }
 
   .nav-links:hover {
-    background-color: #fff;
+    background-color: #fff; 
     color: #242424;
+
     border-radius: 0;
+    box-sizing: border-box;
+
   }
 
   .navbar-logo {
     position: absolute;
+    margin-top: 15px;
+    font-size: 1.3rem;
     top: 0;
     left: 0;
     transform: translate(25%, 50%);
@@ -139,7 +145,8 @@
   .nav-links-mobile {
     display: block;
     text-align: center;
-    margin: 2rem auto;
+    margin: 1.5rem auto;
+   
     border-radius: 4px;
     width: 80%;
     text-decoration: none;
@@ -152,7 +159,7 @@
   }
 
   .nav-links-mobile:hover {
-    background: #fff;
+    background: #fff; 
     color: #242424;
     transition: 250ms;
   }
